# examples

./: .gitignore
cgal/: CMakeLists.txt
cgal/src/: alpha_shape.cc  util.h
eigen/: CMakeLists.txt
eigen/src/: test.cc
flatbuffer/: CMakeLists.txt  stu.fbs
flatbuffer/cmake/: flatbuffer.cmake
flatbuffer/src/: test.cc
glm/: CMakeLists.txt
glm/src/: test.cc
glog/: CMakeLists.txt
glog/src/: test.cc
gtest/: CMakeLists.txt
gtest/src/: CMakeLists.txt  func.cc  func.h
gtest/test/: CMakeLists.txt  test_case.cc
jitter/: jitter.py
jsoncpp/: CMakeLists.txt  README.md  example.json
jsoncpp/src/: JsonIO.h  test.cc
libjpeg-turbo/: CMakeLists.txt  README.md
libjpeg-turbo/src/: frame.cc  frame.h  jpeg_codec.cc  jpeg_codec.h  main.cc  main.h  tjpeg_codec.cc  tjpeg_codec.h
libjpeg-turbo/test_data/: lena_128x128.rgb24  lena_128x128.yuv
libpng/: CMakeLists.txt
libpng/src/: main.cc  main.h  png_codec.cc  png_codec.h
obb/: run.py
opencv4/: CMakeLists.txt
opencv4/src/: test.cc
threejs/src/: index.html
threejs/src/js/: engine.js  util.js
vue/vue_html/: index.html
vue/vue_vite/myfirstproj/: README.md  package-lock.json  package.json
vue/vue_vite/myfirstproj/src/: App.vue  main.js
vue/vue_vite/myfirstproj/src/components/: footer.vue  header.vue
